# GLstudy

./: CMakeLists.txt  main.cpp  test.cpp
func/: CMakeLists.txt  funcs.cpp  funcs.h
src/: LoadShaders.cpp  glad.c
src/include/glad/: glad.h
src/include/learnopengl/: filesystem.h
src/lib/: glfw3.lib
src/source/objects/planet/: planet.mtl
src/source/objects/teapot/: teapot.mtl
